/**
 * Demonstra√ß√£o Completa do Sistema gRPC Avan√ßado
 * 
 * Este script demonstra todos os recursos implementados:
 * 1. Autentica√ß√£o JWT
 * 2. Error Handling Robusto
 * 3. Load Balancing
 * 4. Streaming Bidirecional (Chat)
 */

const TaskGRPCClient = require('./src/client/client');

async function runCompleteDemo() {
    console.log('üéØ DEMONSTRA√á√ÉO COMPLETA - Sistema gRPC Avan√ßado');
    console.log('================================================\n');

    const client = new TaskGRPCClient('localhost:50051');
    const userId = 'user1';

    try {
        // 1. AUTENTICA√á√ÉO
        console.log('1Ô∏è‚É£ TESTANDO AUTENTICA√á√ÉO JWT');
        console.log('‚îÄ‚îÄ‚îÄ‚îÄ‚îÄ‚îÄ‚îÄ‚îÄ‚îÄ‚îÄ‚îÄ‚îÄ‚îÄ‚îÄ‚îÄ‚îÄ‚îÄ‚îÄ‚îÄ‚îÄ‚îÄ‚îÄ‚îÄ‚îÄ‚îÄ‚îÄ‚îÄ‚îÄ‚îÄ');
        
        console.log('üîê Fazendo login...');
        const loginResponse = await client.login('teste@exemplo.com', '123456');
        console.log(`‚úÖ Login: ${loginResponse.message}`);
        console.log(`üîë Token gerado: ${loginResponse.token.substring(0, 20)}...`);
        
        console.log('üîç Validando token...');
        const validationResponse = await client.validateToken();
        console.log(`‚úÖ Valida√ß√£o: ${validationResponse.message}`);
        console.log(`üë§ Usu√°rio: ${validationResponse.user_id}\n`);

        // 2. OPERA√á√ïES CRUD COM AUTENTICA√á√ÉO
        console.log('2Ô∏è‚É£ TESTANDO CRUD COM AUTENTICA√á√ÉO');
        console.log('‚îÄ‚îÄ‚îÄ‚îÄ‚îÄ‚îÄ‚îÄ‚îÄ‚îÄ‚îÄ‚îÄ‚îÄ‚îÄ‚îÄ‚îÄ‚îÄ‚îÄ‚îÄ‚îÄ‚îÄ‚îÄ‚îÄ‚îÄ‚îÄ‚îÄ‚îÄ‚îÄ‚îÄ‚îÄ‚îÄ‚îÄ‚îÄ‚îÄ‚îÄ');
        
        console.log('üìù Criando tarefas...');
        const task1 = await client.createTask(
            'Implementar Autentica√ß√£o JWT',
            'Adicionar interceptadores para valida√ß√£o de tokens',
            'high',
            userId
        );
        console.log(`‚úÖ Tarefa 1: ${task1.task.title}`);

        const task2 = await client.createTask(
            'Implementar Error Handling',
            'Tratamento robusto de erros gRPC',
            'high',
            userId
        );
        console.log(`‚úÖ Tarefa 2: ${task2.task.title}`);

        const task3 = await client.createTask(
            'Configurar Load Balancing',
            'Balanceamento entre m√∫ltiplos servidores',
            'medium',
            userId
        );
        console.log(`‚úÖ Tarefa 3: ${task3.task.title}`);

        const task4 = await client.createTask(
            'Implementar Chat Bidirecional',
            'Streaming em tempo real para chat',
            'medium',
            userId
        );
        console.log(`‚úÖ Tarefa 4: ${task4.task.title}\n`);

        // 3. LISTAR E ATUALIZAR TAREFAS
        console.log('3Ô∏è‚É£ TESTANDO LISTAGEM E ATUALIZA√á√ÉO');
        console.log('‚îÄ‚îÄ‚îÄ‚îÄ‚îÄ‚îÄ‚îÄ‚îÄ‚îÄ‚îÄ‚îÄ‚îÄ‚îÄ‚îÄ‚îÄ‚îÄ‚îÄ‚îÄ‚îÄ‚îÄ‚îÄ‚îÄ‚îÄ‚îÄ‚îÄ‚îÄ‚îÄ‚îÄ‚îÄ‚îÄ‚îÄ‚îÄ‚îÄ‚îÄ‚îÄ');
        
        const taskList = await client.listTasks(userId);
        console.log(`üìä Total de tarefas: ${taskList.total}`);
        taskList.tasks.forEach((task, index) => {
            console.log(`   ${index + 1}. ${task.title} [${task.priority}] - ${task.completed ? '‚úÖ' : '‚è≥'}`);
        });

        console.log('\nüîÑ Atualizando tarefas...');
        const updated1 = await client.updateTask(task1.task.id, {
            completed: true,
            title: '‚úÖ Implementar Autentica√ß√£o JWT - Conclu√≠do!'
        });
        console.log(`‚úÖ Atualizada: ${updated1.task.title}`);

        const updated2 = await client.updateTask(task2.task.id, {
            completed: true,
            title: '‚úÖ Implementar Error Handling - Conclu√≠do!'
        });
        console.log(`‚úÖ Atualizada: ${updated2.task.title}\n`);

        // 4. STREAMING DE TAREFAS
        console.log('4Ô∏è‚É£ TESTANDO STREAMING DE TAREFAS');
        console.log('‚îÄ‚îÄ‚îÄ‚îÄ‚îÄ‚îÄ‚îÄ‚îÄ‚îÄ‚îÄ‚îÄ‚îÄ‚îÄ‚îÄ‚îÄ‚îÄ‚îÄ‚îÄ‚îÄ‚îÄ‚îÄ‚îÄ‚îÄ‚îÄ‚îÄ‚îÄ‚îÄ‚îÄ‚îÄ‚îÄ‚îÄ‚îÄ‚îÄ');
        
        console.log('üåä Iniciando stream de atualiza√ß√µes...');
        const taskStream = client.streamTaskUpdates(userId, (update) => {
            console.log(`üì® Stream: ${update.message}`);
            if (update.task) {
                console.log(`   üìã Tarefa: ${update.task.title}`);
            }
        });

        // Simular atualiza√ß√µes via stream
        setTimeout(async () => {
            console.log('\nüîÑ Simulando atualiza√ß√µes via stream...');
            await client.createTask('Nova tarefa via stream', 'Teste de streaming em tempo real', 'low', userId);
        }, 2000);

        setTimeout(async () => {
            await client.updateTask(task3.task.id, { 
                completed: true,
                title: '‚úÖ Configurar Load Balancing - Conclu√≠do!'
            });
        }, 4000);

        // 5. CHAT BIDIRECIONAL
        console.log('5Ô∏è‚É£ TESTANDO CHAT BIDIRECIONAL');
        console.log('‚îÄ‚îÄ‚îÄ‚îÄ‚îÄ‚îÄ‚îÄ‚îÄ‚îÄ‚îÄ‚îÄ‚îÄ‚îÄ‚îÄ‚îÄ‚îÄ‚îÄ‚îÄ‚îÄ‚îÄ‚îÄ‚îÄ‚îÄ‚îÄ‚îÄ‚îÄ‚îÄ‚îÄ‚îÄ‚îÄ');
        
        console.log('üí¨ Iniciando chat...');
        const chatStream = client.chatStream((message) => {
            const timestamp = new Date(message.timestamp).toLocaleTimeString();
            const sender = message.user_id === 'system' ? 'ü§ñ Sistema' : `üë§ ${message.user_id}`;
            console.log(`üí¨ [${timestamp}] ${sender}: ${message.content}`);
        });

        // Simular mensagens de chat
        setTimeout(() => {
            console.log('\nüí¨ Enviando mensagens de teste...');
            client.sendChatMessage(chatStream, 'Ol√°! Chat bidirecional funcionando!');
        }, 1000);

        setTimeout(() => {
            client.sendChatMessage(chatStream, 'Sistema gRPC avan√ßado implementado com sucesso!');
        }, 3000);

        setTimeout(() => {
            client.sendChatMessage(chatStream, 'Todos os recursos funcionando: Auth, Error Handling, Load Balancing, Streaming!');
        }, 5000);

        // 6. M√âTRICAS E ESTAT√çSTICAS
        setTimeout(() => {
            console.log('\n6Ô∏è‚É£ M√âTRICAS E ESTAT√çSTICAS');
            console.log('‚îÄ‚îÄ‚îÄ‚îÄ‚îÄ‚îÄ‚îÄ‚îÄ‚îÄ‚îÄ‚îÄ‚îÄ‚îÄ‚îÄ‚îÄ‚îÄ‚îÄ‚îÄ‚îÄ‚îÄ‚îÄ‚îÄ‚îÄ‚îÄ‚îÄ‚îÄ‚îÄ');
            
            const metrics = client.getMetrics();
            console.log('üìä M√©tricas do Cliente:');
            console.log(`   Total de requisi√ß√µes: ${metrics.requests}`);
            console.log(`   Requisi√ß√µes de autentica√ß√£o: ${metrics.authRequests}`);
            console.log(`   Mensagens de chat: ${metrics.chatMessages}`);
            console.log(`   Tempo m√©dio: ${metrics.averageTime}ms`);
            console.log(`   Taxa de sucesso: ${metrics.successRate}%`);
            console.log(`   Taxa de erro: ${metrics.errorRate}%`);
        }, 6000);

        // Finalizar demonstra√ß√£o
        setTimeout(() => {
            console.log('\nüéâ DEMONSTRA√á√ÉO CONCLU√çDA COM SUCESSO!');
            console.log('=====================================');
            console.log('‚úÖ Autentica√ß√£o JWT: Funcionando');
            console.log('‚úÖ Error Handling: Funcionando');
            console.log('‚úÖ CRUD com Autentica√ß√£o: Funcionando');
            console.log('‚úÖ Streaming de Tarefas: Funcionando');
            console.log('‚úÖ Chat Bidirecional: Funcionando');
            console.log('‚úÖ M√©tricas e Monitoramento: Funcionando');
            console.log('\nüöÄ Sistema gRPC Avan√ßado implementado com sucesso!');
            console.log('üìö Baseado no roteiro do professor com extens√µes');
            
            // Cleanup
            taskStream.cancel();
            chatStream.end();
            client.close();
            
            console.log('\nüëã Demonstra√ß√£o finalizada!');
        }, 8000);

    } catch (error) {
        console.error('‚ùå Erro na demonstra√ß√£o:', error.message);
        console.error('Stack:', error.stack);
        client.close();
    }
}

// Executar demonstra√ß√£o
if (require.main === module) {
    runCompleteDemo().catch(error => {
        console.error('‚ùå Erro fatal:', error);
        process.exit(1);
    });
}

module.exports = { runCompleteDemo };
